# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/image_framework/ide/image_decode_config.gni")

ohos_shared_library("rawplugin") {
  if (!use_clang_android && !use_clang_ios) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
  }
  sources = [
    "$image_subsystem/plugins/common/libs/image/librawplugin/src/plugin_export.cpp",
    "$image_subsystem/plugins/common/libs/image/librawplugin/src/raw_decoder.cpp",
    "$image_subsystem/plugins/common/libs/image/librawplugin/src/raw_stream.cpp",
  ]

  cflags = [
    "-DIMAGE_DEBUG_FLAG",
    "-DIMAGE_COLORSPACE_FLAG",
  ]

  include_dirs = [
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "$image_subsystem/frameworks/innerkitsimpl/stream/include",
    "$image_subsystem/frameworks/innerkitsimpl/utils/include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/plugins/common/libs/image/libjpegplugin/include",
    "$image_subsystem/plugins/common/libs/image/librawplugin/include",
    "$image_subsystem/plugins/manager/include",
    "$image_subsystem/plugins/manager/include/image",
    "$image_subsystem/plugins/manager/include/pluginbase",
    "//third_party/libexif",
    "//third_party/skia",
    "//third_party/skia/third_party/externals/libjpeg-turbo",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
  ]

  if (use_mingw_win) {
    defines = image_decode_windows_defines
    include_dirs +=
        [ "$image_subsystem/mock/native/include" ]
    deps = [
      "$image_subsystem/mock/native:log_mock_static",
      "$image_subsystem/plugins/manager:pluginmanager_static",
    ]

    libs = [ "//prebuilts/mingw-w64/ohos/linux-x86_64/clang-mingw/x86_64-w64-mingw32/lib/libws2_32.a" ]
  } else {
    defines = [ "DUAL_ADAPTER" ]
    DUAL_ADAPTER = true
    deps = [
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "$image_subsystem/interfaces/innerkits:image_native",
      "$image_subsystem/plugins/common/libs/image/libjpegplugin:jpegplugin",
      "$image_subsystem/plugins/manager:pluginmanager",
      "//third_party/skia/third_party/piex",
    ]

    if (DUAL_ADAPTER) {
    }

    external_deps = [ "hilog:libhilog" ]
  }

  part_name = "image_framework"
  subsystem_name = "graphic"
}

ohos_prebuilt_etc("rawpluginmetadata") {
  source = "rawplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "graphic"
  part_name = "image_framework"
}
