# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/image_standard/ide/image_decode_config.gni")

#config("webp_public_config") {
#  include_dirs = [ "${asdk_dir}/static_library/${target_os}_${target_cpu}/include/external/webp/include" ]
#}

ohos_shared_library("webpplugin") {
  sources = [
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libwebpplugin/src/plugin_export.cpp",
#    "//foundation/multimedia/image_standard/plugins/common/libs/image/libwebpplugin/src/webp_decoder.cpp",
  ]

  include_dirs = [
    "//foundation/multimedia/image_standard/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_standard/plugins/manager/include",
    "//foundation/multimedia/image_standard/plugins/manager/include/image",
    "//foundation/multimedia/image_standard/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libwebpplugin/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//third_party/flutter/skia/third_party/externals/libwebp/src",
  ]
  if (use_mingw_win) {
    defines = image_decode_windows_defines
#    public_configs = [ ":webp_public_config" ]
    include_dirs += [ "//foundation/multimedia/image_standard/mock/native/include" ]

    deps = [
      "${asdk_dir}/static_library/${target_os}_${target_cpu}:libwebp-image_static",
      "//foundation/multimedia/image_standard/mock/native:log_mock_static",
    ]
  } else {
    defines = [ "DUAL_ADAPTER" ]
    DUAL_ADAPTER = true
    include_dirs += [ "//utils/native/base/include" ]

    deps = [
      "//foundation/multimedia/image_standard/plugins/manager:pluginmanager",
      "//utils/native/base:utils",
    ]

    if (DUAL_ADAPTER) {
#      public_configs = [ ":webp_public_config" ]
#      aosp_deps = [ "shared_library:libhwui" ]
    }

#    external_deps = [ "hilog:libhilog" ]
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  }

  part_name = "multimedia_image"

  subsystem_name = "multimedia"
}

ohos_prebuilt_etc("webppluginmetadata") {
  source = "webpplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "multimedia"
  part_name = "multimedia_image"
}
