# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/image_framework/ide/image_decode_config.gni")

ohos_shared_library("webpplugin") {
  if (!use_clang_android && !use_clang_ios) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
  }
  sources = [
    "$image_subsystem/plugins/common/libs/image/libwebpplugin/src/plugin_export.cpp",
    "$image_subsystem/plugins/common/libs/image/libwebpplugin/src/webp_decoder.cpp",
    "$image_subsystem/plugins/common/libs/image/libwebpplugin/src/webp_encoder.cpp",
  ]

  include_dirs = [
    "$image_subsystem/frameworks/innerkitsimpl/utils/include",
    "$image_subsystem/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "$image_subsystem/plugins/manager/include",
    "$image_subsystem/plugins/manager/include/image",
    "$image_subsystem/plugins/manager/include/pluginbase",
    "$image_subsystem/plugins/common/libs/image/libwebpplugin/include",
    "$image_subsystem/interfaces/innerkits/include",
    "//third_party/flutter/skia/third_party/externals/libwebp/src",
    "$skia_root/skia/include/core",
    "$skia_root/skia/include/encode",
    "$skia_root/skia",
    "$skia_root/skia/src/ports/skia_ohos",
    "$skia_root/skia/src/ports",
    "$skia_root/skia/src/images",
    "//third_party/expat/lib",
    "$skia_root/skia/include/private",
    "//third_party/flutter/skia/third_party/externals/freetype/include/freetype",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "${graphic_subsystem}/interfaces/inner_api/surface",
  ]
  if (use_mingw_win) {
    defines = image_decode_windows_defines
    include_dirs +=
        [ "$image_subsystem/mock/native/include" ]

    deps = [
      "${asdk_dir}/static_library/${target_os}_${target_cpu}:libwebp-image_static",
      "$image_subsystem/mock/native:log_mock_static",
    ]
  } else {
    defines = [ "DUAL_ADAPTER" ]
    DUAL_ADAPTER = true
    include_dirs += [ "//commonlibrary/c_utils/base/include" ]

    deps = [
      "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "$image_subsystem/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
      "$image_subsystem/interfaces/innerkits:image_native",
      "$image_subsystem/plugins/manager:pluginmanager",
    ]
    deps += skia_platform

    if (DUAL_ADAPTER) {
    }

    external_deps = [
      "c_utils:utils",
      "graphic_2d:surface",
    ]
  }
  cflags = [ "-DIMAGE_COLORSPACE_FLAG" ]
  part_name = "image_framework"

  subsystem_name = "graphic"
}

ohos_prebuilt_etc("webppluginmetadata") {
  source = "webpplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "graphic"
  part_name = "image_framework"
}
